--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -3,9 +3,13 @@
     {{#each blog}}
       <div class="col-sm-6 col-lg-4">
         <div class="card mt-4" style="width: 18rem;">
-          <img class="card-img-top" src="{{ this.image }}" alt="Card image cap">
+          <a href="/articles/{{ this.slug }}">
+            <img class="card-img-top" src="{{ this.image }}" alt="Card image cap">
+          </a>
           <div class="card-body">
-            <h5 class="card-title">{{ this.name }}</h5>
+            <a href="/articles/{{ this.slug }}">
+              <h5 class="card-title">{{ this.name }}</h5>
+            </a>
             <p class="card-text">{{ this.description }}</p>
             <a href="#" class="btn btn-primary">Read more</a>
           </div>
