--- a/src/resources/views/home.hbs
+++ b/src/resources/views/home.hbs
@@ -2,7 +2,7 @@
   <div class="row">
     {{#each blog}}
       <div class="col-sm-6 col-lg-4">
-        <div class="card mt-4" style="width: 18rem;">
+        <div class="card mt-4">
           <a href="/articles/{{ this.slug }}">
             <img class="card-img-top" src="{{ this.image }}" alt="Card image cap">
           </a>
